Cambio de meta title

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="description" content="Descripción de nuestra web">
-        <title>Devmaster Perú</title>
+        <title>Devmaster Perú | Contact</title>
         <!-- CSS -->
         <link rel="stylesheet" href="css/style.css">
     </head>
